# segsource

./: .gitignore  .pre-commit-config.yaml  .spelling-wordlist.txt  Cargo.toml  README.md  helper.py
.vim/: coc-settings.json
derive/: Cargo.toml
derive/src/: from_seg.rs  lib.rs  util.rs
derive/src/from_seg/: field_attrs.rs  mod.rs  variant_attrs.rs
derive/src/from_seg/attrs/: field.rs  mod.rs  toplevel.rs  variant.rs
internal-macros/: Cargo.toml
internal-macros/src/: adders.rs  helpers.rs  lib.rs  testing.rs
internal-macros/src/adders/: nom.rs
macros/: Cargo.toml
macros/src/: lib.rs  num_getters.rs  util.rs
macros/src/from_seg/: attr.rs
segsource/: Cargo.toml
segsource/src/: derive_extras.rs  error.rs  lib.rs  marker.rs  segment.rs  sources.rs  sync.rs  testing.rs  util.rs
segsource/src/segment/: data.rs  mod.rs  sync.rs
segsource/src/sources/: bytes_source.rs  mmap.rs  mod.rs  segment_like.rs  vec_source.rs
segsource/src/testing/: mod.rs  segment.rs
segsource/src/testing/sources/: mod.rs  segment_like.rs
segsource/src/util/: sync.rs
