[package]
name = "segsource-derive"
version = "0.1.0"
edition = "2018"
homepage = "https://github.com/russells-crockpot/segsource"
repository = "https://github.com/russells-crockpot/segsource"
documentation = "https://docs.rs/segsource-macros/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.27"
quote = "1.0.9"

[dependencies.syn]
version = "1.0.73"
features = [ "full",]
