[package]
name = "segsource-derive"
version = "0.1.0"
edition = "2018"
license = "MIT"
homepage = "https://github.com/russells-crockpot/segsource"
repository = "https://github.com/russells-crockpot/segsource"
description = "Derive implementations for `segsource`. You should use `segsource` instead."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"
