[package]
name = "segsource-internal-macros"
version = "0.2.1"
authors = [ "Brendan McGloin <stmonkeydoom@gmail.com>",]
edition = "2018"
license = "MIT"
description = "Internal macros used by segsource."
homepage = "https://github.com/russells-crockpot/segsource"
repository = "https://github.com/russells-crockpot/segsource"
documentation = "https://docs.rs/segsource-internal-macros/"

[dependencies.nom]
version = "6.1.2"
optional = true
