[package]
name = "segsource-macros"
version = "0.1.0"
authors = [ "Brendan McGloin <stmonkeydoom@gmail.com>",]
edition = "2018"
license = "MIT"
description = "Proc macros used by/for segsource."
homepage = "https://github.com/russells-crockpot/segsource"
repository = "https://github.com/russells-crockpot/segsource"
documentation = "https://docs.rs/segsource-macros/"

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4.0"
proc-macro2 = "1.0.27"
quote = "1.0.9"

[dependencies.syn]
version = "1.0.73"
features = [ "full",]

[features]
default = []
async = []

[dependencies.here]
path = "/home/bmcgloin/workspace/here"
version = "1.0.0"
