[package]
name = "segsource"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "A library to make reading data of any type quicker and easier."
homepage = "https://github.com/russells-crockpot/segsource"
repository = "https://github.com/russells-crockpot/segsource"
readme = "../README.md"
documentation = "https://docs.rs/segsource/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bytes = { version = "1", optional = true}
thiserror = "1"
tokio = { version = "1", optional = true, features = ["fs", "io-util", "rt"]}
async-trait = { version = "0.1", optional = true }
pin-project-lite = { version = "0.2", optional = true }
futures-core = { version = "0.3", optional = true }

[dependencies.fs3]
version = "0.5"
optional = true

[dependencies.memmap2]
version = "0.3"
optional = true

[dependencies.segsource-derive]
path = "../derive"
version = "0.1.0"
optional = true

[features]
default = ["derive"]
derive = ["segsource-derive"]
memmap = [ "fs3", "memmap2",]
async = ["tokio", "async-trait", "pin-project-lite", "futures-core"]

[dev-dependencies]
color-backtrace = "0.5"
ctor = "0.1"
